<resources>
    <string name="versionCode">3.0</string>
    <string name="versionName">3.0</string>
    <string name="app_name">Basic Keyboard Benchmarking Game</string>
    <string name="place_holder_text">Place holder text</string>
    <string name="failed_words">Failed words</string>
    <string name="correct_words">Correct words</string>
    <string name="wpm">Words per minute (WPM)</string>
    <string name="time">Time</string>
    <string name="start_game">Start Game</string>
    <string name="pause">Pause</string>
    <string name="continue_button">Continue</string>
    <string name="restart">Restart</string>
    <string name="no_game_type_error_message">Please select a game mode</string>
    <string name="label_type_time">Time (seconds)</string>
    <string name="label_type_num_words">Number of words</string>
    <string name="label_type_num_errors">Number of errors</string>
    <string name="label_type_num_correct_words">Number of correct words</string>
    <string name="label_main_menu_time">Time</string>
    <string name="label_main_menu_num_words">Number of words</string>
    <string name="label_main_menu_num_errors">Number of errors</string>
    <string name="label_main_menu_num_correct_words">Number of correct words</string>
    <string name="label_main_menu_text">Chi phrases (Compilation of parts of sentences)</string>
    <string name="auto_correct">Auto-correct</string>
    <string name="next">Next</string>
    <string name="choose_a_game_mode">Choose a game mode:</string>
    <string name="label_main_menu_no_end">No end</string>
    <string name="skip_on_fail">Skip on fail</string>
    <string name="twelvedicts_word_list">12dicts English words list (Single Words)</string>
    <string name="no_source_error">No source for text</string>
    <string name="view_benchmark">View Benchmark</string>
    <string name="next_word">Next word:</string>
    <string name="error_invalid_finish_mark_2">\'.Insert number bigger than 0</string>
    <string name="error_invalid_finish_mark_1">Invalid number inserted in field \'</string>
    <string name="game_over">Game reach the end</string>
    <string name="kspc">Keystrokes per char (KSPC)</string>
    <string name="keystrokes_per_second_ksps">Keystrokes per second (KSPS)</string>
    <string name="msd_error_rate">MSD Error rate</string>
    <string name="choose_source">Choose source:</string>
    <string name="benchmarks">Benchmarks</string>
    <string name="about">About</string>
    <string name="contact_developer">Contact the developer</string>
    <string name="about_email_label">Email me</string>
    <string name="about_github_label">Follow this project on Github</string>
    <string name="about_description">Basic Keyboard Benchmarking Game is a simple typing bencharmk game application for android that can be used to measure the keyboard\'s or the user\'s performance when typing. This project was developed for the Institute of Computer Aided Automation of the Technische Universität Wien (TUWien).</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="benchmark_to_clipboard">Benchmark copied to clipboard</string>
    <string name="all_benchmarks_to_clipboard">All benchmarks copied to clipboard</string>
</resources>
