<?xml version="1.0" encoding="utf-8"?>
<android.widget.TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tuwien.buildinginteractioninterfaces.typingbenchmark.presentation.PlayGame">

    <android.widget.GridLayout
        android:gravity="end"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_gravity="start"
            android:gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/label_next_word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next_word"
                android:textStyle="bold"
                android:textColor="@android:color/black" />
            <TextView
                android:id="@+id/next_word"
                android:gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/place_holder_text"
                />

        </LinearLayout>

        <include layout="@layout/benchmarks_ingame_stats" />

    </android.widget.GridLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/current_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place_holder_text" />

        <EditText
            android:id="@+id/keyboard_input"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:imeOptions="actionSend"
            android:inputType="text"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_game" />
        <Button
            android:id="@+id/pause_button"
            android:visibility="gone"
            android:text="@string/pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/pause_menu"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/continue_button"
                android:text="@string/continue_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/restart_button"
                android:text="@string/restart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="ButtonStyle" />
            <Button
                android:id="@+id/benchmark_button"
                android:text="@string/view_benchmark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

    </LinearLayout>


</android.widget.TableLayout>
