<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="end"
    android:orientation="horizontal"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/label_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time" />

        <TextView
            android:id="@+id/label_velocity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/wpm" />

        <TextView
            android:id="@+id/label_keystrokes_per_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/keystrokes_per_second_ksps" />

        <TextView
            android:id="@+id/label_keystrokes_per_char"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/kspc" />

        <TextView
            android:id="@+id/label_msd_error_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/msd_error_rate" />

        <TextView
            android:id="@+id/label_correct_words"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/correct_words" />

        <TextView
            android:id="@+id/label_failed_words"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/failed_words" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.tuwien.buildinginteractioninterfaces.typingbenchmark.util.Chronometer
            android:id="@+id/chronometer"
            android:layout_width="wrap_content"
            android:layout_height="17sp"
            android:format="%s"
            android:textSize="12sp"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/wpm_stat"
            android:layout_width="wrap_content"
            android:layout_height="17sp"
            android:text="0"
            android:textSize="12sp"
            android:textColor="@android:color/holo_green_dark"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/ksps_stat"
            android:layout_width="wrap_content"
            android:layout_height="17sp"
            android:text="0"
            android:textSize="12sp"
            android:textColor="@android:color/holo_green_dark"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/kspc_stat"
            android:layout_width="wrap_content"
            android:layout_height="17sp"
            android:textSize="12sp"
            android:text="0"
            android:textColor="@android:color/holo_red_dark"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/msd_error_rate_stat"
            android:layout_width="wrap_content"
            android:layout_height="17sp"
            android:text="0"
            android:textSize="12sp"
            android:textColor="@android:color/holo_red_dark"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/correct_words"
            android:layout_width="wrap_content"
            android:layout_height="17sp"
            android:text="0"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="12sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/failed_words"
            android:layout_width="wrap_content"
            android:layout_height="17sp"
            android:text="0"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="12sp"
            tools:ignore="HardcodedText" />

    </LinearLayout>
</LinearLayout>